# 3d-cnn-with-attention

./: advanced_models.py  layer.py  model.py  model_performance_results.csv  pyproject.toml  speed_test.py  train.py  uniformerv2_model.py
model_analysis/: R2plus1dWithPoolFormerAndPE_info.txt  cnn3d_info.txt  cnn3dwithmobileattention_info.txt  cnn3dwithmobileattentionandpe_info.txt  cnn3dwithpoolformer_info.txt  cnn3dwithpoolformerandpe_info.txt  i3d_info.txt  i3dwithmobileattention_info.txt  i3dwithpoolformer_info.txt  r2plus1d_info.txt  r2plus1dwithmobileattention_info.txt  r2plus1dwithmobileattentionandpe_info.txt  r2plus1dwithpoolformer_info.txt  uniformerv2_nano_info.txt  uniformerv2_tiny_info.txt
models/: cnn3d.onnx  cnn3d.pt  cnn3dwithmobileattention.onnx  cnn3dwithmobileattention.pt  cnn3dwithmobileattentionandpe.onnx  cnn3dwithmobileattentionandpe.pt  cnn3dwithpoolformer.onnx  cnn3dwithpoolformer.pt  cnn3dwithpoolformerandpe.onnx  cnn3dwithpoolformerandpe.pt  i3d.onnx  i3d.pt  i3dwithmobileattention.onnx  i3dwithmobileattention.pt  i3dwithpoolformer.onnx  i3dwithpoolformer.pt  r2plus1d.onnx  r2plus1d.pt  r2plus1dwithmobileattention.onnx  r2plus1dwithmobileattention.pt  r2plus1dwithmobileattentionandpe.onnx  r2plus1dwithmobileattentionandpe.pt  r2plus1dwithpoolformer.onnx  r2plus1dwithpoolformer.pt  r2plus1dwithpoolformerandpe.onnx  r2plus1dwithpoolformerandpe.pt  uniformerv2_nano.onnx  uniformerv2_nano.pt  uniformerv2_tiny.onnx  uniformerv2_tiny.pt
results/: model_speed_comparison.csv
