[project]
name = "3d-cnn-with-attention"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "onnx==1.17.0",
    "onnxruntime==1.21.1",
    "pandas>=2.2.3",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

